syntax = "proto3";

package inboxpert.services.categorization.v1;
option go_package = "github.com/samiransarii/inboXpert/services/email-categorization/proto;emailcategorization";

import "email_categorization.proto";

message CategorizeRequest {
    Email email = 1;
}

message CategorizeResponse {
    CategoryResult result = 1;
}

message BatchCategorizeRequest {
    repeated Email emails = 1;
}

message BatchCategorizeResponse {
    repeated CategoryResult results = 1;
}

service EmailCategorizationService {
    rpc CategorizeEmail(CategorizeRequest) returns (CategorizeResponse) {}
    rpc BatchCategorizeEmails(BatchCategorizeRequest) returns (BatchCategorizeResponse) {}
}